2003-08-26  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: QueryListener::notifyObjUpdated now gets
	a sequence of CalObj's.

	* pcs/query.c (add_component): send the whole object to the listener,
	not just the UID. Improved the way the listeners are notified, by allocating
	a CORBA sequence to be used for all listeners, not one for each.
	(match_component): pass the CalComponent to add_component, not only the UID.
	(start_cached_query_cb): send the whole object to the listener.

	* cal-client/cal-query.[ch]: changed argument names for "obj_updated"
	signal.
	(obj_updated_cb): pass the calobj's, not uid's.

	* gui/e-tasks.c (query_obj_updated_cb):
	* gui/gnome-cal.c (dn_query_obj_updated_cb, purging_obj_updated_cb):
	* gui/e-cal-model.c (query_obj_updated_cb): we now get the object's
	string representation instead of the UID.

2003-08-25  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (cal_client_get_object): added a 'rid' argument
	to match the IDL method.

	* conduits/calendar/calendar-conduit.c (local_record_from_uid):
	* conduits/todo/todo-conduit.c (local_record_from_uid):
	* gui/comp-editor-factory.c (edit_existing):
	* gui/comp-util.c (cal_comp_is_on_server):
	* gui/e-cal-model.c (query_obj_updated_cb):
	* gui/e-itip-control.c (find_server, get_real_item, update_attendee_status):
	* gui/gnome-cal.c (dn_query_obj_updated_cb, purging_obj_updated_cb):
	* gui/dialogs/comp-editor.c (obj_updated_cb): adapted to changes in
	cal_client_get_object().

2003-08-23  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/query-backend.c (object_updated_cb):
	* pcs/cal-backend.c (cal_backend_get_type_by_uid): use 'rid' parameter
	where appropriate.

	* pcs/cal-backend-file.c (check_dup_uid): removed unused variables.
	(cal_backend_file_compute_changes_foreach_key): pass a NULL 'rid'
	to cal_backend_get_object().
	(lookup_component): get a 'rid' argument also.
	(cal_backend_file_cancel_object, cal_backend_file_remove_object):